<resources>
    <string name="app_name">UserInteraction</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="enter_date_of_birth">Enter Date of birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="company_logo">Company Logo</string>
    <string name="create_account">Create Account</string>
    <string-array name="spinner_label">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
