<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/company_logo"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:hint="@string/enter_first_name"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:drawableStart="@drawable/ic_account_box_white"/>

    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_surname"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:drawableStart="@drawable/ic_account_box_white"/>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:hint="@string/enter_email_address"
        android:textColorHint="@android:color/white"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_address_white"/>

    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/email_address"
        android:textColorHint="@android:color/white"
        android:hint="@string/enter_date_of_birth"
        android:drawableStart="@drawable/ic_date"/>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/birthday"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@android:color/white"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_phone_white"/>
    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday"
        android:layout_toEndOf="@id/phone_number"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number"
        android:hint="@string/enter_password"
        android:textColorHint="@android:color/background_dark"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_security_black_24dp"
        android:drawableLeft="@drawable/ic_security_black_24dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_below="@+id/phone_number"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_dark"

        />

    <CheckBox
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:text="@string/terms_and_conditions"
        android:checked="true"
        android:textColor="@android:color/background_dark"
        android:onClick="showToast"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conditions"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_marginTop="20dp"
        android:onClick="createAccount"
        />
</RelativeLayout>